# fastqc-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
hypermash/: Cargo.toml
src/: hash.rs  main.rs  process.rs
src/report/: base_per_pos_specs.json  counter_specs.json  fastqc_summary.txt.tera  gc_content_specs.json  quality_per_pos_specs.json  read_lengths_specs.json  report.html.tera  sequence_quality_score_specs.json
tests/: lib.rs
tests/expected/: report.html
tests/resources/: example.fastq
