[package]
name = "fastqc-rs"
version = "0.1.0"
authors = ["Felix Wiegand <fxwiegand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
needletail = "0.4.0"
clap = "3.0.0-beta.2"
serde_json = "1.0.62"
plotters = "0.3.0"
tera = "1.6.1"
chrono = "0.4.19"
reqwest = "0.9.0"
