[package]
name = "fastqc-rs"
version = "0.3.0"
authors = ["Felix Wiegand <fxwiegand@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A fast quality control tool for FASTQ files written in rust"
repository = "https://github.com/fastqc-rs/fastqc-rs"
homepage = "https://fastqc-rs.github.io"
keywords = ["fastq"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
needletail = "0.4.0"
clap = "3.0.0-beta.2"
serde_json = "1.0.62"
tera = "1.6.1"
chrono = "0.4.19"
reqwest = "0.9.0"
rustc-hash = "1.1.0"
itertools = "0.10.0"

[[bin]]
name = "fqc"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1
debug = 1
